--- a/static/css/vertical-layout-light/style.css
+++ b/static/css/vertical-layout-light/style.css
@@ -31324,4 +31324,48 @@ div.tagsinput span.tag a {
   display: inline;
   margin-left: 10px;
 }
+
+
+.loader {
+width: 120px;
+height: 75px;
+display: flex;
+flex-wrap: wrap;
+align-items: flex-end;
+justify-content: space-between;
+}
+
+.loader span{
+font-size: 22px;
+text-transform: uppercase;
+margin: auto;
+}
+
+.ball {
+width: 25px;
+height: 25px;
+border-radius:50%;
+background-color:#000;
+animation: bounce .5s alternate infinite;
+}
+
+.ball:nth-child(2){
+animation-delay: .16s;
+}
+.ball:nth-child(3){
+animation-delay: .32s;
+}
+
+@keyframes bounce {
+    from{
+    transform: scaleX(1.25);
+    }
+    to{
+    transform:
+     translateY(-50px) scaleX(1);
+    }
+ }
+
+}
+
 /*# sourceMappingURL=../maps/vertical-layout-light/style.css.map */
